Add nesting child elements & fill contents

--- a/index.html
+++ b/index.html
@@ -1,15 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
+        rel="stylesheet">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="header"></div>
-    <div class="sidebar"></div>
-    <div class="main"></div>
+    <div class="header">
+        <div class="header-top">
+            <div class="search-bar">
+                search-bar <input type="text" name="search">
+            </div>
+            <div class="profile-bar">Eliptik Kagi</div>
+        </div>
+        <div class="header-bottom">
+            <div class="profile">
+                <p>hi there,</p>
+                <p>Eliptik (@eliptik)</p>
+            </div>
+            <div class="buttons">
+                <div>New</div>
+                <div>Upload</div>
+                <div>Share</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sidebar">
+        <div class="logo">Dashboard</div>
+        <div class="nav">
+            <p>Home</p>
+            <p>Profile</p>
+            <p>Messages</p>
+            <p>History</p>
+            <p>Tasks</p>
+            <p>Communities</p>
+            <p>Settings</p>
+            <p>Support</p>
+            <p>Privacy</p>
+        </div>
+    </div>
+    <div class="main">
+        <div class="projects-container">
+            <p>Your projects</p>
+            <div class="cards">
+                <div class="project card">
+                    <div class="card-text">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat qui excepturi cum ducimus
+                            numquam animi officiis itaque.</p>
+                    </div>
+                    <div class="card-buttons">
+                        btn1 btn2 btn3
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="card-text">
+                        <h3>Less Cool Project</h3>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat.</p>
+                    </div>
+                    <div class="card-buttons">
+                        btn1 btn2 btn3
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="card-text">
+                        <h3>Impossible App</h3>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                            pariatur.</p>
+                    </div>
+                    <div class="card-buttons">
+                        btn1 btn2 btn3
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="card-text">
+                        <h3>Easy Peasy App</h3>
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                            anim id est laborum.</p>
+                    </div>
+                    <div class="card-buttons">
+                        btn1 btn2 btn3
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="card-text">
+                        <h3>Ad Blocker</h3>
+                        <p>Amet purus gravida quis blandit turpis cursus. Enim facilisis gravida neque convallis a cras
+                            semper. Dapibus ultrices in iaculis nunc sed augue.</p>
+                    </div>
+                    <div class="card-buttons">
+                        btn1 btn2 btn3
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="card-text">
+                        <h3>Money Maker</h3>
+                        <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse
+                            interdum consectetur libero.</p>
+                    </div>
+                    <div class="card-buttons">
+                        btn1 btn2 btn3
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="announcements-container">
+            <p>Announcements</p>
+            <div class="card">
+                <h4>Site Maintenance</h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                    laborum...</p>
+                <hr>
+                <h4>Community Share Day</h4>
+                <p>Vel rem, ipsa officia commodi veniam excepturi, ex, molestias perspiciatis consequuntur sint error
+                    voluptatem...</p>
+                <hr>
+                <h4>Updated Privacy Policy</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores voluptatum ipsa cupiditate unde...
+                </p>
+            </div>
+        </div>
+        <div class="trending-container">
+            <p>Trending</p>
+            <div class="card">
+                <div class="user1">
+                    <div class="username">@eliptik</div>
+                    <div>World Peace Builder</div>
+                </div>
+                <div class="user2">
+                    <div class="username">@someone</div>
+                    <div>Super Cool Project</div>
+                </div>
+                <div class="user3">
+                    <div class="username">@ali</div>
+                    <div>Life Changing App</div>
+                </div>
+                <div class="user4">
+                    <div class="username">@veli</div>
+                    <div>No Traffic Maker</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
