Fix sidebar layout

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     </div>
 
     <div class="sidebar">
-        <div class="logo">Dashboard</div>
         <div class="nav">
-            <p>Home</p>
-            <p>Profile</p>
-            <p>Messages</p>
-            <p>History</p>
-            <p>Tasks</p>
-            <p>Communities</p>
-            <p>Settings</p>
-            <p>Support</p>
-            <p>Privacy</p>
+            <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo"><div class="logo">Dashboard</div>
+            <img src="./Assets/home.svg" alt="Home"><p>Home</p>
+            <img src="./Assets/card-account-details-outline.svg" alt="Profile"><p>Profile</p>
+            <img src="./Assets/message.svg" alt="Messages"><p>Messages</p>
+            <img src="./Assets/clock-time-three.svg" alt="History"><p>History</p>
+            <img src="./Assets/note-multiple.svg" alt="Tasks"><p>Tasks</p>
+            <img src="./Assets/account-group.svg" alt="Communities"><p>Communities</p>
+            <img src="./Assets/cog.svg" alt="Settings" class="settings"><p class="settings">Settings</p>
+            <img src="./Assets/help-box.svg" alt="Support"><p>Support</p>
+            <img src="./Assets/shield-check.svg" alt="Privacy"><p>Privacy</p>
         </div>
     </div>
     <div class="main">
