Add custom color variables & search-bar styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="header">
         <div class="header-top">
             <div class="search-bar">
-                search-bar <input type="text" name="search">
+                <label for="search"><img src="./Assets/magnify.svg" alt="Search"></label><input type="text" name="search" id="search">
             </div>
             <div class="profile-bar">Eliptik Kagi</div>
         </div>
