Finish the styling of the header section

--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
     <div class="header">
         <div class="header-top">
             <div class="search-bar">
-                <label for="search"><img src="./Assets/magnify.svg" alt="Search"></label><input type="text" name="search" id="search">
+                <label for="search"><img src="./Assets/magnify.svg" alt="Search"></label><input type="text"
+                    name="search" id="search">
             </div>
-            <div class="profile-bar">Eliptik Kagi</div>
+            <div class="profile-bar">
+                <img src="./Assets/bell-ring-outline.svg" alt="Bell">
+                <img src="./Assets/profile1.jpg" alt="Profile-1" class="profile-picture">
+                <p>Eliptik Kagi</p>
+            </div>
         </div>
         <div class="header-bottom">
             <div class="profile">
-                <p>hi there,</p>
-                <p>Eliptik (@eliptik)</p>
+                <img src="./Assets/profile1.jpg" alt="Profile-1" class="profile-picture">
+                <div class="greeting">
+                    <p>Hi there,</p>
+                    <p>Eliptik Kagi (@eliptik)</p>
+                </div>
+
             </div>
             <div class="buttons">
                 <div>New</div>
@@ -37,16 +46,26 @@
 
     <div class="sidebar">
         <div class="nav">
-            <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo"><div class="logo">Dashboard</div>
-            <img src="./Assets/home.svg" alt="Home"><p>Home</p>
-            <img src="./Assets/card-account-details-outline.svg" alt="Profile"><p>Profile</p>
-            <img src="./Assets/message.svg" alt="Messages"><p>Messages</p>
-            <img src="./Assets/clock-time-three.svg" alt="History"><p>History</p>
-            <img src="./Assets/note-multiple.svg" alt="Tasks"><p>Tasks</p>
-            <img src="./Assets/account-group.svg" alt="Communities"><p>Communities</p>
-            <img src="./Assets/cog.svg" alt="Settings" class="settings"><p class="settings">Settings</p>
-            <img src="./Assets/help-box.svg" alt="Support"><p>Support</p>
-            <img src="./Assets/shield-check.svg" alt="Privacy"><p>Privacy</p>
+            <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo">
+            <div class="logo">Dashboard</div>
+            <img src="./Assets/home.svg" alt="Home">
+            <p>Home</p>
+            <img src="./Assets/card-account-details-outline.svg" alt="Profile">
+            <p>Profile</p>
+            <img src="./Assets/message.svg" alt="Messages">
+            <p>Messages</p>
+            <img src="./Assets/clock-time-three.svg" alt="History">
+            <p>History</p>
+            <img src="./Assets/note-multiple.svg" alt="Tasks">
+            <p>Tasks</p>
+            <img src="./Assets/account-group.svg" alt="Communities">
+            <p>Communities</p>
+            <img src="./Assets/cog.svg" alt="Settings" class="settings">
+            <p class="settings">Settings</p>
+            <img src="./Assets/help-box.svg" alt="Support">
+            <p>Support</p>
+            <img src="./Assets/shield-check.svg" alt="Privacy">
+            <p>Privacy</p>
         </div>
     </div>
     <div class="main">
