Finish main section styling

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                             numquam animi officiis itaque.</p>
                     </div>
                     <div class="card-buttons">
-                        btn1 btn2 btn3
+                        <img src="./Assets/star-plus-outline.svg" alt="add">
+                        <img src="./Assets/eye-plus-outline.svg" alt="view">
+                        <img src="./Assets/source-fork.svg" alt="share">
                     </div>
                 </div>
                 <div class="project card">
@@ -89,7 +91,9 @@
                             commodo consequat.</p>
                     </div>
                     <div class="card-buttons">
-                        btn1 btn2 btn3
+                        <img src="./Assets/star-plus-outline.svg" alt="add">
+                        <img src="./Assets/eye-plus-outline.svg" alt="view">
+                        <img src="./Assets/source-fork.svg" alt="share">
                     </div>
                 </div>
                 <div class="project card">
@@ -99,7 +103,9 @@
                             pariatur.</p>
                     </div>
                     <div class="card-buttons">
-                        btn1 btn2 btn3
+                        <img src="./Assets/star-plus-outline.svg" alt="add">
+                        <img src="./Assets/eye-plus-outline.svg" alt="view">
+                        <img src="./Assets/source-fork.svg" alt="share">
                     </div>
                 </div>
                 <div class="project card">
@@ -109,7 +115,9 @@
                             anim id est laborum.</p>
                     </div>
                     <div class="card-buttons">
-                        btn1 btn2 btn3
+                        <img src="./Assets/star-plus-outline.svg" alt="add">
+                        <img src="./Assets/eye-plus-outline.svg" alt="view">
+                        <img src="./Assets/source-fork.svg" alt="share">
                     </div>
                 </div>
                 <div class="project card">
@@ -119,7 +127,9 @@
                             semper. Dapibus ultrices in iaculis nunc sed augue.</p>
                     </div>
                     <div class="card-buttons">
-                        btn1 btn2 btn3
+                        <img src="./Assets/star-plus-outline.svg" alt="add">
+                        <img src="./Assets/eye-plus-outline.svg" alt="view">
+                        <img src="./Assets/source-fork.svg" alt="share">
                     </div>
                 </div>
                 <div class="project card">
@@ -129,7 +139,9 @@
                             interdum consectetur libero.</p>
                     </div>
                     <div class="card-buttons">
-                        btn1 btn2 btn3
+                        <img src="./Assets/star-plus-outline.svg" alt="add">
+                        <img src="./Assets/eye-plus-outline.svg" alt="view">
+                        <img src="./Assets/source-fork.svg" alt="share">
                     </div>
                 </div>
             </div>
@@ -153,21 +165,33 @@
         <div class="trending-container">
             <p>Trending</p>
             <div class="card">
-                <div class="user1">
-                    <div class="username">@eliptik</div>
-                    <div>World Peace Builder</div>
+                <div class="user">
+                    <img src="./Assets/profile1.jpg" alt="profile1">
+                    <div class="trending-profile">
+                        <div class="username">@eliptik</div>
+                        <div>World Peace Builder</div>
+                    </div>
                 </div>
-                <div class="user2">
-                    <div class="username">@someone</div>
-                    <div>Super Cool Project</div>
+                <div class="user">
+                    <img src="./Assets/profile2.jpg" alt="profile2">
+                    <div class="trending-profile">
+                        <div class="username">@someone</div>
+                        <div>Super Cool Project</div>
+                    </div>
                 </div>
-                <div class="user3">
-                    <div class="username">@ali</div>
-                    <div>Life Changing App</div>
+                <div class="user">
+                    <img src="./Assets/profile4.jpg" alt="profile4">
+                    <div class="trending-profile">
+                        <div class="username">@ali</div>
+                        <div>Life Changing App</div>
+                    </div>
                 </div>
-                <div class="user4">
-                    <div class="username">@veli</div>
-                    <div>No Traffic Maker</div>
+                <div class="user">
+                    <img src="./Assets/profile3.jpg" alt="profile3">
+                    <div class="trending-profile">
+                        <div class="username">@veli</div>
+                        <div>No Traffic Maker</div>
+                    </div>
                 </div>
             </div>
         </div>
