Change sidebar nav to list elements & add shadows

--- a/index.html
+++ b/index.html
@@ -45,28 +45,42 @@
     </div>
 
     <div class="sidebar">
-        <div class="nav">
-            <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo">
-            <div class="logo">Dashboard</div>
-            <img src="./Assets/home.svg" alt="Home">
-            <p>Home</p>
-            <img src="./Assets/card-account-details-outline.svg" alt="Profile">
-            <p>Profile</p>
-            <img src="./Assets/message.svg" alt="Messages">
-            <p>Messages</p>
-            <img src="./Assets/clock-time-three.svg" alt="History">
-            <p>History</p>
-            <img src="./Assets/note-multiple.svg" alt="Tasks">
-            <p>Tasks</p>
-            <img src="./Assets/account-group.svg" alt="Communities">
-            <p>Communities</p>
-            <img src="./Assets/cog.svg" alt="Settings" class="settings">
-            <p class="settings">Settings</p>
-            <img src="./Assets/help-box.svg" alt="Support">
-            <p>Support</p>
-            <img src="./Assets/shield-check.svg" alt="Privacy">
-            <p>Privacy</p>
-        </div>
+        
+            <ul class="nav">
+                <h1>
+                    <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo">
+                    <p>Dashboard</p>
+                </h1>
+                </li>
+                <li><img src="./Assets/home.svg" alt="Home">
+                    <p>Home</p>
+                </li>
+                <li><img src="./Assets/card-account-details-outline.svg" alt="Profile">
+                    <p>Profile</p>
+                </li>
+                <li><img src="./Assets/message.svg" alt="Messages">
+                    <p>Messages</p>
+                </li>
+                <li><img src="./Assets/clock-time-three.svg" alt="History">
+                    <p>History</p>
+                </li>
+                <li><img src="./Assets/note-multiple.svg" alt="Tasks">
+                    <p>Tasks</p>
+                </li>
+                <li><img src="./Assets/account-group.svg" alt="Communities">
+                    <p>Communities</p>
+                </li>
+                <li><img src="./Assets/cog.svg" alt="Settings" class="settings">
+                    <p class="settings">Settings</p>
+                </li>
+                <li><img src="./Assets/help-box.svg" alt="Support">
+                    <p>Support</p>
+                </li>
+                <li><img src="./Assets/shield-check.svg" alt="Privacy">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        
     </div>
     <div class="main">
         <div class="projects-container">
