Fix sidebar styling & add button effects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     name="search" id="search">
             </div>
             <div class="profile-bar">
-                <img src="./Assets/bell-ring-outline.svg" alt="Bell">
+                <img src="./Assets/bell-ring-outline.svg" alt="Bell" class="bell_btn">
                 <img src="./Assets/profile1.jpg" alt="Profile-1" class="profile-picture">
                 <p>Eliptik Kagi</p>
             </div>
@@ -45,43 +45,44 @@
     </div>
 
     <div class="sidebar">
-        
-            <ul class="nav">
-                <h1>
-                    <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo">
-                    <p>Dashboard</p>
-                </h1>
-                </li>
-                <li><img src="./Assets/home.svg" alt="Home">
-                    <p>Home</p>
-                </li>
-                <li><img src="./Assets/card-account-details-outline.svg" alt="Profile">
-                    <p>Profile</p>
-                </li>
-                <li><img src="./Assets/message.svg" alt="Messages">
-                    <p>Messages</p>
-                </li>
-                <li><img src="./Assets/clock-time-three.svg" alt="History">
-                    <p>History</p>
-                </li>
-                <li><img src="./Assets/note-multiple.svg" alt="Tasks">
-                    <p>Tasks</p>
-                </li>
-                <li><img src="./Assets/account-group.svg" alt="Communities">
-                    <p>Communities</p>
-                </li>
-                <li><img src="./Assets/cog.svg" alt="Settings" class="settings">
-                    <p class="settings">Settings</p>
-                </li>
-                <li><img src="./Assets/help-box.svg" alt="Support">
-                    <p>Support</p>
-                </li>
-                <li><img src="./Assets/shield-check.svg" alt="Privacy">
-                    <p>Privacy</p>
-                </li>
-            </ul>
-        
+        <h1>
+            <img src="./Assets/view-dashboard.svg" alt="Logo" class="logo">
+            <p>Dashboard</p>
+        </h1>
+        <ul class="nav">
+            </li>
+            <li><img src="./Assets/home.svg" alt="Home">
+                <p>Home</p>
+            </li>
+            <li><img src="./Assets/card-account-details-outline.svg" alt="Profile">
+                <p>Profile</p>
+            </li>
+            <li><img src="./Assets/message.svg" alt="Messages">
+                <p>Messages</p>
+            </li>
+            <li><img src="./Assets/clock-time-three.svg" alt="History">
+                <p>History</p>
+            </li>
+            <li><img src="./Assets/note-multiple.svg" alt="Tasks">
+                <p>Tasks</p>
+            </li>
+            <li><img src="./Assets/account-group.svg" alt="Communities">
+                <p>Communities</p>
+            </li>
+        </ul>
+        <ul class="nav">
+            <li><img src="./Assets/cog.svg" alt="Settings" class="settings">
+                <p class="settings">Settings</p>
+            </li>
+            <li><img src="./Assets/help-box.svg" alt="Support">
+                <p>Support</p>
+            </li>
+            <li><img src="./Assets/shield-check.svg" alt="Privacy">
+                <p>Privacy</p>
+            </li>
+        </ul>
     </div>
+
     <div class="main">
         <div class="projects-container">
             <p>Your projects</p>
