Add final adjustments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -208,6 +209,8 @@
                         <div>No Traffic Maker</div>
                     </div>
                 </div>
+                <div class="github-link"><p><a href="https://github.com/eliptik1"><i class="fa fa-github"
+                    style="font-size:26px; color: rgb(56, 56, 56)"></i></a> eliptik1 </p></div>
             </div>
         </div>
     </div>
